// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render different time formats eg(short,medium,full,long) should render component as expected (1) 1`] = `
<gux-time-beta>
  <mock:shadow-root>
    <span>
      9:35 AM
    </span>
  </mock:shadow-root>
</gux-time-beta>
`;

exports[`#render different time formats eg(short,medium,full,long) should render component as expected (2) 1`] = `
<gux-time-beta>
  <mock:shadow-root>
    <span>
      9:35:30 AM
    </span>
  </mock:shadow-root>
</gux-time-beta>
`;

exports[`#render different time formats eg(short,medium,full,long) should render component as expected (3) 1`] = `
<gux-time-beta>
  <mock:shadow-root>
    <span>
      9:35:30 AM GMT-04:00
    </span>
  </mock:shadow-root>
</gux-time-beta>
`;

exports[`#render different time formats eg(short,medium,full,long) should render component as expected (4) 1`] = `
<gux-time-beta>
  <mock:shadow-root>
    <span>
      9:35:30 AM GMT-4
    </span>
  </mock:shadow-root>
</gux-time-beta>
`;
